--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
         <title>CC3 - 2016</title>
         <style>
             header {
-                background-image: url("images/header1.jpg");
+                background-image: url("images/header2.jpg");
                 color: white;
                 width:100%;
-                min-height:250px;
-                max-height:480px;
+                min-height:300px;
             }
             .w3-topnav a:first-child:hover{color: #009688;border-bottom: 3px solid transparent;}
         </style>
@@ -27,8 +26,8 @@
               <a href="#proyectos" title="PROYECTOS">Proyectos</a>
               <a href="#horario" title="HORARIO">Horario</a>
         </nav>
-        <header id="header" class="w3-container w3-card-4 w3-padding-32">
-            <div class="w3-center w3-margin-64 w3-white w3-row w3-round-xlarge" style="opacity:0.95">
+        <header id="header" class="w3-container w3-card-4">
+            <div class="w3-center w3-margin-64 w3-white w3-row w3-round-xlarge" style="opacity:0.9">
                 <div class="w3-half">
                     <h1 class="w3-text-teal w3-jumbo">CC3</h1>
                     <h1 class="w3-text-teal w3-jumbo w3-animate-bottom">Estructura de Máquinas</h1>
@@ -86,7 +85,7 @@
                 </p>
             </div>
             <h1 id="horario" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Horario</h1>
-            <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
+            <div class="w3-card-24 w3-white w3-padding-8 w3-round-large" style="overflow: scroll">
                 <p class="w3-text w3-justify w3-large w3-margin-16">
                     <span class="w3-text w3-tag w3-teal">Sección A</span><br>
                     <span class="w3-text w3-tag w3-green">Sección B</span><br>
