--- a/LABS/LAB0.html
+++ b/LABS/LAB0.html
@@ -106,6 +106,21 @@
 
     <span style='color:#800080; '>}</span>
 </pre>
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    <strong>Ejercicio 1.3: Permutación</strong><br><br>
+                    Escribe una función que, dado un string de letras minúsculas, y un entero de 1 al 25, devuelva un nuevo string con el mensaje permutado la cantidad indicada de espacios.   
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    Por ejemplo, si el mensaje recibido es “abcdefg”y el número es 3, ‘a’ ahora se correría y se volvería  ‘d’ , ‘b’ se volvería ‘e’ , ‘c’ se volvería ‘f’ , y así sucesivamente, así que el nuevo mensaje sería “defghij”. Utiliza el alfabeto inglés  (NO INCLUYAS LA LETRA ‘ñ’).
+<p class="w3-text w3-justify w3-large w3-margin-16">
+                    La función está tiene que llevar la siguiente firma:
+                </p>
+<pre class="w3-code w3-light-grey notranslate">    <span style="color:#696969; ">// Asuma que todos los parametros son validos</span>
+    <span style="color:#800000; font-weight:bold; ">public</span> <span style="color:#800000; font-weight:bold; ">static</span> String permutation(String message, int spaces) <span style="color:#800080; ">{</span>
+        <span style="color:#696969; ">// Su codigo aqui</span>
+    <span style="color:#800080; ">}</span>
+            </div>
+        </div>
+</pre>
             </div>
         </div>
         <footer class="w3-container w3-padding-32 w3-theme w3-center">
