--- a/LABS/LAB0.html
+++ b/LABS/LAB0.html
@@ -41,6 +41,12 @@
                     </ul>
                 </p>
             </div>
+            <h1 id="notas" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Setup</h1>
+            <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    Descarguen los archivos necesarios para este laboratorio en el siguiente <a href="https://drive.google.com/file/d/0B6TRsDuz4XayZWdrS2o0YmtPNEk/view" target="_blank"><span class="w3-btn w3-red w3-round w3-medium">link</link></a>
+                </p>
+            </div>
             <h1 id="notas" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Ejercicio 1</h1>
             <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
                 <p class="w3-text w3-justify w3-large w3-margin-16">
@@ -108,7 +114,7 @@
 </pre>
                 <p class="w3-text w3-justify w3-large w3-margin-16">
                     <strong>Ejercicio 1.3: Permutación</strong><br><br>
-                    Escribe una función que, dado un string de letras minúsculas, y un entero de 1 al 25, devuelva un nuevo string con el mensaje permutado la cantidad indicada de espacios.   
+                    Escribe una función que, dado un string de letras minúsculas, y un entero de 1 al 25, devuelva un nuevo string con el mensaje permutado la cantidad indicada de espacios.
                 <p class="w3-text w3-justify w3-large w3-margin-16">
                     Por ejemplo, si el mensaje recibido es “abcdefg”y el número es 3, ‘a’ ahora se correría y se volvería  ‘d’ , ‘b’ se volvería ‘e’ , ‘c’ se volvería ‘f’ , y así sucesivamente, así que el nuevo mensaje sería “defghij”. Utiliza el alfabeto inglés  (NO INCLUYAS LA LETRA ‘ñ’).
 <p class="w3-text w3-justify w3-large w3-margin-16">
