--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h4 class="w3-xxlarge">2016</h4>
                     <h2 class="w3-xlarge">Catedrático: Ali Lemus</h2>
                 </div>
-                 <div class="w3-half">
+                 <div class="w3-half w3-padding-top">
                         <img src="images/P&H.jpg" height="300" class="w3-round-medium"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/K&R.jpg" height="300" class="w3-round-medium"/>
                 </div>
             </div>
