Modificado link lab2 por que no funcionaba

--- a/LABS/LAB2.html
+++ b/LABS/LAB2.html
@@ -46,7 +46,7 @@
             <h1 id="notas" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Setup</h1>
             <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
                 <p class="w3-text w3-justify w3-large w3-margin-16">
-                    Descarguen los archivos necesarios para este laboratorio en el siguiente <a href="https://docs.google.com/uc?authuser=0&id=0B6TRsDuz4XayYlhlUWJGSEZfbXc&export=download" target="_blank"><span class="w3-btn w3-red w3-round w3-medium">link</link></a>
+                    Descarguen los archivos necesarios para este laboratorio en el siguiente <a href="https://drive.google.com/file/d/0B6TRsDuz4XayYlhlUWJGSEZfbXc/view?usp=sharing" target="_blank"><span class="w3-btn w3-red w3-round w3-medium">link</link></a>
                 </p>
             </div>
             <h1 id="notas" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Compilando y Corriendo un programa en C</h1>
