--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h1 class="w3-text-teal w3-jumbo">CC3</h1>
                     <h1 class="w3-text-teal w3-jumbo w3-animate-bottom">Estructura de Máquinas</h1>
                     <h4 class="w3-xxlarge">2016</h4>
-                    <h2 class="w3-xlarge">Catedrático: Ali Lemus</h2>
+                    <h2 class="w3-xlarge">Catedrático: Ali Lemus, Luis Jimenez</h2>
                 </div>
                  <div class="w3-half w3-padding-top">
                         <img src="images/P&H.jpg" height="300" class="w3-round-medium"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/K&R.jpg" height="300" class="w3-round-medium"/>
