--- a/PROJECTS/P1_PART1.html
+++ b/PROJECTS/P1_PART1.html
@@ -427,8 +427,8 @@ pero no por <tt>quadtree</tt>). No hay excusa para no probar su código.
 <h2 id ="entrega">Entrega</h2>
 
 <p> 
-Debe enviar un correo a <i><font color = "blue" size = 2>alexanderj@galileo.edu</font></i> indicando los miembros de su grupo para que se le asigne un número de grupo en el GES.
-Todas las partes del proyecto deben entregarse el día X, X de Febrero antes de las 11:55 pm en el GES. Por favor comprima la carpeta <code>pj1-CC3</code> que contiene ambas partes del proyecto en un archivo llamado <code>pj1-NGRUPO.zip</code> . <strong> Asegúrese de que su código funciona correctamente antes de enviarlo</strong>.</p>
+Debe enviar un correo a <i><font color = "blue" size = 2>alexanderj@galileo.edu</font></i> indicando con quien trabajará (o si trabajará de forma individual) para que se le asigne un número de grupo en el GES.
+Todas las partes del proyecto deben entregarse el día Jueves, 11 de Febrero antes de las 11:55 pm en el GES. Por favor comprima la carpeta <code>PJ1_1</code> que contiene ambas partes del proyecto en un archivo llamado <code>pj1-NGRUPO.zip</code> . <strong> Asegúrese de que su código funciona correctamente antes de enviarlo</strong>.</p>
 <HR width=30% align="center">
 
 <H3 align="center"> <i>¡Le deseamos buena suerte!</i> </H3>
