--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
                 <p class="w3-text w3-justify w3-large w3-margin-16 w3-center">
                     <a href="PROJECTS/P1_PART1.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 1-1</span></a>
-                    <a href="javascript:void(0)"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 1-2</span></a><br>
+                    <a href="PROJECTS/P1_PART2.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 1-2</span></a><br>
                     <a href="PROJECTS/P2PART1.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 2-1</span></a>
                     <a href="PROJECTS/P2PART2.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 2-2</span></a><br>
                     <a href="javascript:void(0)"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 3</span></a>
