--- a/PROJECTS/P1_PART2.html
+++ b/PROJECTS/P1_PART2.html
@@ -929,7 +929,7 @@ Output:
 <h2 id ="entrega">Entrega</h2>
 
 <p> 
-El proyecto deben entregarse el día Jueves, 10 de Marzo antes de las 11:55 pm en el GES. Por favor comprima la carpeta <code>PJ1_2</code> que contiene ambas partes del proyecto en un archivo llamado <code>pj1-NGRUPO.zip</code> . <strong> Asegúrese de que su código funciona correctamente antes de enviarlo</strong>.</p>
+El proyecto deben entregarse el día Lunes, 14 de Marzo antes de las 11:55 pm en el GES. Por favor comprima la carpeta <code>PJ1_2</code> que contiene ambas partes del proyecto en un archivo llamado <code>pj1-NGRUPO.zip</code> . <strong> Asegúrese de que su código funciona correctamente antes de enviarlo.</strong> Los grupos creados serán los mismos que para la parte 1 del proyecto, si desea cambiar de pareja (o trabajar individual) envie un correo a <font color="blue"> alexanderj@galileo.edu</font><font color="red">(Secciones A, B y C)</font> o <font color="blue">diegocdl@galileo.edu</font> <font color="red"> (Sólo seccion AN).</font> </fieldset>.</p>
 <HR width=30% align="center">
 
 <H3 align="center"> <i>¡Le deseamos buena suerte!</i> </H3>
