--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
                     <a href="LABS/LAB13.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 13</span></a>
                 </p>
             </div>
+            <h1 id="laboratorios" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Tutorials</h1>
+            <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
+                <p class="w3-text w3-justify w3-large w3-margin-16 w3-center">
+                    <a href="TUTORIALS/python.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Python</span></a>
+                </p>
+            </div>
             <h1 id="proyectos" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Proyectos</h1>
             <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
                 <p class="w3-text w3-justify w3-large w3-margin-16 w3-center">
